--- a/JetpackComposeDemoApp/app/build.gradle
+++ b/JetpackComposeDemoApp/app/build.gradle
@@ -96,4 +96,7 @@ dependencies {
     def glide = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
+
+    implementation "androidx.compose.runtime:runtime:$compose"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose"
 }
