--- a/JetpackComposePlayground/app/build.gradle
+++ b/JetpackComposePlayground/app/build.gradle
@@ -10,13 +10,16 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.descifrador.jetpackcomposedemoapp"
+        applicationId "com.descifrador.jetpackcomposeplayground"
         minSdk 21
         targetSdk 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -33,27 +36,27 @@ android {
         jvmTarget = '1.8'
         useIR = true
     }
+    buildFeatures {
+        compose true
+    }
     composeOptions {
-        def kotlin_compiler_version = "1.4.30"
+        def kotlin_compiler_version = "1.5.10"
         kotlinCompilerVersion kotlin_compiler_version
 
         def kotlin_compiler_extension_version = "1.0.0-beta01"
         kotlinCompilerExtensionVersion kotlin_compiler_extension_version
     }
-    buildFeatures {
-        compose true
-    }
 }
 
 dependencies {
-
+    def kotlin_version = "1.5.10"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
 
-    def app_compat = "1.2.0"
+    def app_compat = "1.3.0"
     implementation "androidx.appcompat:appcompat:$app_compat"
 
-    def material = "1.2.1"
+    def material = "1.3.0"
     implementation "com.google.android.material:material:$material"
 
     def constraint_layout = "2.0.4"
