--- a/JetpackComposePlayground/build.gradle
+++ b/JetpackComposePlayground/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        def gradle = '7.1.0-alpha01'
-        classpath "com.android.tools.build:gradle:$gradle"
+        classpath "com.android.tools.build:gradle:7.1.0-alpha01"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
 
         def hilt = "2.28-alpha"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt"
@@ -22,6 +22,7 @@ allprojects {
         jcenter()
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
