--- a/JetpackComposePlayground/app/build.gradle
+++ b/JetpackComposePlayground/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -40,17 +41,18 @@ android {
         compose true
     }
     composeOptions {
-        def kotlin_compiler_version = "1.5.10"
+        def kotlin_compiler_version = "1.4.30"
         kotlinCompilerVersion kotlin_compiler_version
 
-        def kotlin_compiler_extension_version = "1.0.0-beta01"
+        def kotlin_compiler_extension_version = "1.0.0-beta07"
         kotlinCompilerExtensionVersion kotlin_compiler_extension_version
     }
 }
 
 dependencies {
-    def kotlin_version = "1.5.10"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta08'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
     implementation 'androidx.core:core-ktx:1.5.0'
 
     def app_compat = "1.3.0"
@@ -87,6 +89,7 @@ dependencies {
     def retrofit = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
     def hilt = "2.28-alpha"
     implementation "com.google.dagger:hilt-android:$hilt"
@@ -102,4 +105,8 @@ dependencies {
 
     implementation "androidx.compose.runtime:runtime:$compose"
     implementation "androidx.compose.runtime:runtime-livedata:$compose"
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
