--- a/JetpackComposePlayground/app/build.gradle
+++ b/JetpackComposePlayground/app/build.gradle
@@ -109,4 +109,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    api 'com.google.dagger:dagger-android:2.35.1'
+    api 'com.google.dagger:dagger-android-support:2.27'
+    kapt 'com.google.dagger:dagger-android-processor:2.27'
+
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 }
